--- a/templates/success.html
+++ b/templates/success.html
@@ -2,9 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Success</title>
+    <link rel="stylesheet" href="../static/styles.css">
 </head>
 <body>
+
+     <img src = "../static/logo.png" alt="Lexus" class="logo">
+    <h2 align="center"> Thank you for you feedback!</h2>
 
 </body>
 </html>
