--- a/static/styles.css
+++ b/static/styles.css
@@ -15,7 +15,7 @@ body {
 	max-width: 650px;
 	margin: 1rem auto;
 	overflow: auto;
-	padding: 0 2rem;
+	padding: 0.2rem;
 }
 
 h1 {
@@ -46,21 +46,23 @@ img {
 
 .form-group {
 	margin: 1rem 0;
+	align: center;
 }
 
 input[type='text'],
 select,
 textarea {
 	display: block;
-	width: 100%;
+	width: 50%;
 	padding: 0.4rem;
 	font-size: 1.2rem;
 	border: 1px solid #ccc;
+	justify-content: center;
 }
 
 .btn {
 	display: block;
-	width: 100%;
+	width: 50%;
 	background: #333;
 	color: #fff;
 	padding: 10px 20px;
