--- a/templates/index.html
+++ b/templates/index.html
@@ -7,8 +7,10 @@
 </head>
 <body>
 
+    <img src = "../static/logo.png" alt="Lexus" class="logo">
 
-<form action="/submit" method="POST">
+
+    <form action="/submit" method="POST">
         <div class="form-group">
           <h3>Customer Name</h3>
           <input
@@ -52,7 +54,7 @@
           ></textarea>
         </div>
         <input type="submit" value="Submit" class="btn" />
-      </form>
+  </form>
 
 </body>
 </html>
