Warning Message added

--- a/templates/index.html
+++ b/templates/index.html
@@ -9,6 +9,9 @@
 
     <img src = "../static/logo.png" alt="Lexus" class="logo">
 
+    {%if message%}
+    <p class="message">{{message | safe }}</p>
+    {%endif%}
 
     <form action="/submit" method="POST">
         <div class="form-group">
